Add simple GraphView
This is just an attempt to probe the functionality of the jjoe64
graphView library. Basically on the phone is displayed a graph with
fixed points. Also some modifications to the interface layout were
implemented for better visualization.

--- a/main_code_android/app/build.gradle
+++ b/main_code_android/app/build.gradle
@@ -73,4 +73,8 @@ dependencies {
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'xpp3', module: 'xpp3'
     }
+
+    // Import GraphView Library:
+    implementation 'com.jjoe64:graphview:4.2.2'
+
 }
