Polish user interface with constraint layout
The "constraint layout" package is now used as the base for the user
interface. This was made just for better visualization.

--- a/main_code_android/app/build.gradle
+++ b/main_code_android/app/build.gradle
@@ -76,5 +76,6 @@ dependencies {
 
     // Import GraphView Library:
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
 }
