Add activity structure for plotting from files
This version adds two activities: one for displaying the files stored in
the DNAamplifier folder and the other one for display the data stored
one the selected file. Up to now, the file is not read, however the
structure is setup for a future implementation for plotting from the
saved files.

--- a/main_code_android/app/src/main/AndroidManifest.xml
+++ b/main_code_android/app/src/main/AndroidManifest.xml
@@ -102,6 +102,16 @@
 			android:name="no.nordicsemi.android.nrftoolbox.template.TemplateService"
 			android:label="@string/template_feature_title" />
 
+		<activity
+			android:name="no.nordicsemi.android.nrftoolbox.template.settings.FilesActivity"
+			android:label="@string/files_activity_title" >
+		</activity>
+
+		<activity
+			android:name="no.nordicsemi.android.nrftoolbox.template.settings.PlotActivity"
+			android:label="@string/plot_activity_title" >
+		</activity>
+
 		<!-- Plug-in activities -->
 		<activity
 			android:name="no.nordicsemi.android.nrftoolbox.dfu.DfuActivity"
